--- a/src/Components/TopNav/TopNav.css
+++ b/src/Components/TopNav/TopNav.css
@@ -91,8 +91,9 @@
 .topnav .drop-wrap .drop-content .drop-link {
   color: white;
   text-decoration: none;
-  padding: 6px 16px 6px 0;
+  padding: 4px 28px 4px 0;
   font-size: 12pt;
+  margin: 4px;
 }
 
 /*# sourceMappingURL=TopNav.css.map */
