--- a/src/Components/TopNav/TopNav.scss
+++ b/src/Components/TopNav/TopNav.scss
@@ -101,8 +101,9 @@
       .drop-link {
         color: white;
         text-decoration: none;
-        padding: 6px 16px 6px 0;
+        padding: 4px 28px 4px 0;
         font-size: 12pt;
+        margin: 4px;
       }
     }
   }
