--- a/src/Components/FilerMenu/FilterMenu.css
+++ b/src/Components/FilerMenu/FilterMenu.css
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 1800px;
+  margin: auto;
 }
 .filter-wrap .accept-filter {
   background-color: #6540b0;
   border: none;
-  border-radius: 50%;
+  border-radius: 10px;
   margin: 12px;
   padding: 6px;
   width: 5%;
@@ -67,6 +69,7 @@
   cursor: pointer;
   color: grey;
   width: 100%;
+  user-select: none;
 }
 .filter-wrap .filter-content .filter-field .filter-dropdown-button .down-icon {
   display: flex;
