--- a/src/Components/FilerMenu/FilterMenu.scss
+++ b/src/Components/FilerMenu/FilterMenu.scss
@@ -1,15 +1,16 @@
 @import "../../colors";
 
-
 .filter-wrap {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 1800px;
+  margin: auto;
 
   .accept-filter {
     background-color: $color-purple;
     border: none;
-    border-radius: 50%;
+    border-radius: 10px;
     margin: 12px;
     padding: 6px;
     width: 5%;
@@ -74,6 +75,7 @@
         cursor: pointer;
         color: grey;
         width: 100%;
+        user-select: none;
 
         .down-icon {
           display: flex;
