--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -8,6 +8,7 @@
   margin: 24px auto;
   background-color: $color-ui;
   padding: 12px;
+  position: relative;
 
   label {
     background-color: $color-purple;
