--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -95,6 +95,8 @@
       font-size: 14pt;
       border-radius: 10px;
       cursor: pointer;
+      text-decoration: none;
+      color: black;
     }
 
     .status-icon {
