--- a/src/Components/FilerMenu/FilterMenu.css
+++ b/src/Components/FilerMenu/FilterMenu.css
@@ -77,7 +77,7 @@
 }
 .filter-wrap .tag-dropdown {
   position: absolute;
-  top: 27%;
+  top: 120px;
   background-color: #6540b0;
   border-radius: 10px;
   padding: 6px;
