--- a/src/Components/FilerMenu/FilterMenu.scss
+++ b/src/Components/FilerMenu/FilterMenu.scss
@@ -87,7 +87,7 @@
 
   .tag-dropdown {
     position: absolute;
-    top: 27%;
+    top: 120px;
     background-color: $color-purple;
     border-radius: 10px;
     padding: 6px;
