--- a/src/Components/ConventionPage/ConventionPage.css
+++ b/src/Components/ConventionPage/ConventionPage.css
@@ -86,8 +86,10 @@
 .main-content-wrap .info-wrap .info-content .third-row {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 16px;
+  width: 100%;
 }
 .main-content-wrap .info-wrap .info-content .third-row .schedule-button {
   border: none;
