--- a/src/Components/ConventionPage/ConventionPage.scss
+++ b/src/Components/ConventionPage/ConventionPage.scss
@@ -99,8 +99,10 @@
       .third-row {
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: space-between;
+        align-items: center;
         margin-top: 16px;
+        width: 100%;
 
         .schedule-button {
           border: none;
