Logging in seems to work

--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -92,6 +92,19 @@ body {
   align-items: center;
   width: 100%;
 }
+.main-wrap .form-wrap .content-wrap .or-signup .signup-button {
+  border: none;
+  border-radius: 10px;
+  padding: 12px;
+  width: 40%;
+  background-color: #f3e156;
+  margin: 12px;
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  font-size: 11pt;
+}
 .main-wrap .form-wrap .content-wrap .line-wrap {
   display: flex;
   flex-direction: row;
