--- a/src/Components/ConventionPage/ConventionPage.scss
+++ b/src/Components/ConventionPage/ConventionPage.scss
@@ -106,6 +106,8 @@
 
         .schedule-button {
           border: none;
+          text-decoration: none;
+          color: black;
           border-radius: 10px;
           background-color: $color-yellow;
           padding: 8px 18px;
