--- a/src/Components/AddConventionPage/AddConventionPage.css
+++ b/src/Components/AddConventionPage/AddConventionPage.css
@@ -10,9 +10,14 @@
   color: white;
   padding: 6px 28px 6px 16px;
   border-radius: 10px;
-  width: fit-content;
+  width: 50%;
   float: left;
   margin-bottom: 12px;
+  border: none;
+  font-size: 15pt;
+}
+.main-content-wrap .name-header:focus {
+  outline: #f3e156 solid 1.5px;
 }
 .main-content-wrap .info-wrap {
   background-color: #3f394b;
@@ -34,7 +39,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  height: fit-content;
+  height: 250px;
 }
 .main-content-wrap .info-wrap .info-content .first-row .image-wrap {
   margin-right: 12px;
@@ -45,6 +50,7 @@
 }
 .main-content-wrap .info-wrap .info-content .first-row .image-wrap img {
   height: 100%;
+  width: 100%;
 }
 .main-content-wrap .info-wrap .info-content .first-row .inner-row-wrap {
   position: relative;
@@ -52,37 +58,35 @@
   flex-direction: column;
   justify-content: space-evenly;
   margin-left: 12px;
-  height: 250px;
-}
-.main-content-wrap .info-wrap .info-content .first-row .inner-row-wrap .inner-row-content {
-  display: flex;
-  flex-direction: row;
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-.main-content-wrap .info-wrap .info-content .first-row .inner-row-wrap .inner-row-content .link-label {
-  padding: 6px 12px;
-  background-color: #6540b0;
-  border-radius: 10px;
-  color: white;
-  margin-right: 12px;
+  height: auto;
 }
 .main-content-wrap .info-wrap .info-content .second-row {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
+.main-content-wrap .info-wrap .info-content .second-row p {
+  align-self: flex-end;
+  color: white;
+  font-size: 10pt;
+}
 .main-content-wrap .info-wrap .info-content .second-row label {
   margin-top: 6px;
   margin-bottom: 12px;
 }
 .main-content-wrap .info-wrap .info-content .second-row .description {
+  width: 100%;
+  resize: none;
+  border: none;
+  font-size: 12pt;
   background-color: #6540b0;
   padding: 8px 16px 8px 12px;
   border-radius: 10px;
   color: white;
   min-height: 150px;
-  font-size: 12pt;
+}
+.main-content-wrap .info-wrap .info-content .second-row .description:focus {
+  outline: #f3e156 solid 1.5px;
 }
 .main-content-wrap .info-wrap .info-content .third-row {
   display: flex;
@@ -91,6 +95,22 @@
   align-items: center;
   margin-top: 16px;
   width: 100%;
+}
+.main-content-wrap .info-wrap .info-content .third-row .tag-dropdown-button {
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f3e156;
+  padding: 6px 12px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.main-content-wrap .info-wrap .info-content .third-row .tag-dropdown-button .down-icon {
+  color: #6540b0;
+  width: 20px;
+  height: 20px;
+  margin-left: 6px;
 }
 .main-content-wrap .info-wrap .info-content .third-row .schedule-button {
   border: none;
@@ -101,9 +121,15 @@
   padding: 8px 18px;
   font-size: 13pt;
   cursor: pointer;
+  align-self: end;
 }
 .main-content-wrap .photos-wrap {
   margin-top: 24px;
+}
+.main-content-wrap .photos-wrap .photos-button {
+  background-color: #f3e156;
+  padding: 6px;
+  border-radius: 10px;
 }
 .main-content-wrap .photos-wrap .photos-content {
   position: relative;
@@ -124,6 +150,21 @@
   width: 100%;
 }
 
+.inner-row-content {
+  display: flex;
+  flex-direction: row;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  width: 100%;
+}
+.inner-row-content .link-label {
+  padding: 6px 12px;
+  background-color: #6540b0;
+  border-radius: 10px;
+  color: white;
+  margin-right: 12px;
+}
+
 label {
   color: white;
   font-size: 14pt;
@@ -140,4 +181,46 @@ label {
   margin-right: 6px;
 }
 
-/*# sourceMappingURL=ConventionPage.css.map */
+.text-input {
+  border: none;
+  color: white;
+  font-size: 12pt;
+  background-color: #6540b0;
+  padding: 6px 12px;
+  border-radius: 10px;
+  margin-right: 6px;
+  width: 30%;
+}
+
+.text-input:focus {
+  outline: #f3e156 solid 1.5px;
+}
+
+.add-button {
+  background-color: #f3e156;
+  border: none;
+  border-radius: 10px;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.deletable-item-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.delete-button {
+  margin-left: 6px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.delete-button .trash-icon {
+  color: white;
+  height: 12pt;
+  width: 12pt;
+}
+
+/*# sourceMappingURL=AddConventionPage.css.map */
