--- a/src/Components/Schedule/Schedule.scss
+++ b/src/Components/Schedule/Schedule.scss
@@ -68,7 +68,7 @@ body {
         margin-left: 12px;
         margin-right: 12px;
         width: 100%;
-        overflow-x: auto;
+        overflow-x: scroll;
         scrollbar-width: thin;
         white-space: nowrap;
 
