Added the ability to dynamically add and delete images to a convention

--- a/src/Components/AddConventionPage/AddConventionPage.css
+++ b/src/Components/AddConventionPage/AddConventionPage.css
@@ -223,4 +223,27 @@ label {
   width: 12pt;
 }
 
+.delete-image-button-wrap {
+  display: flex;
+  flex-direction: row;
+}
+
+.delete-button-img {
+  margin-top: 12px;
+  margin-left: -54px;
+  height: 100%;
+  background: #6540b0;
+  padding: 12px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+.delete-button-img .trash-icon {
+  color: white;
+  height: 12pt;
+  width: 12pt;
+}
+
 /*# sourceMappingURL=AddConventionPage.css.map */
