--- a/src/Components/TopNav/TopNav.css
+++ b/src/Components/TopNav/TopNav.css
@@ -58,6 +58,20 @@
 .topnav .left-wrap .input-container .search-icon {
   color: white;
 }
+.topnav .add-convention-button {
+  position: absolute;
+  right: 65px;
+  border: none;
+  border-radius: 50%;
+  background-color: white;
+  color: #f3e156;
+  font-size: 14pt;
+  text-align: center;
+  padding-top: 5px;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+}
 .topnav .profile-button {
   margin: 6px 12px 6px 6px;
   width: 35px;
