--- a/src/Components/AddConventionPage/AddConventionPage.css
+++ b/src/Components/AddConventionPage/AddConventionPage.css
@@ -5,6 +5,22 @@
   width: 80%;
   max-width: 1300px;
 }
+.main-content-wrap .top-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+.main-content-wrap .top-row .submit-convention-button {
+  background-color: #f3e156;
+  border: none;
+  border-radius: 10px;
+  padding: 6px 12px;
+  cursor: pointer;
+  font-size: 14pt;
+  color: #25212d;
+  margin-bottom: 6px;
+}
 .main-content-wrap .name-header {
   background-color: #6540b0;
   color: white;
