--- a/src/Components/ErrorNotification/ErrorNotification.css
+++ b/src/Components/ErrorNotification/ErrorNotification.css
@@ -13,6 +13,7 @@
   z-index: 1;
   border-radius: 10px;
   margin-top: 12px;
+  width: 360px;
 }
 .error-notification-wrap .error-notification .error-icon {
   color: #ef5f5f;
