--- a/src/Components/ErrorNotification/ErrorNotification.scss
+++ b/src/Components/ErrorNotification/ErrorNotification.scss
@@ -15,6 +15,7 @@
     z-index: 1;
     border-radius: 10px;
     margin-top: 12px;
+    width: 360px;
 
     .error-icon {
       color: $color-error;
