--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -66,6 +66,7 @@
   border-radius: 10px;
   padding: 6px 14px;
   color: white;
+  min-height: 120px;
 }
 .item-main-wrap .item-right-pane {
   display: flex;
