--- a/src/Components/ConventionPage/ConventionPage.scss
+++ b/src/Components/ConventionPage/ConventionPage.scss
@@ -21,9 +21,25 @@
     background-color: $color-ui;
     padding: 12px;
 
-    .status-icon {
+    .status-icon-upcoming {
       position: relative;
       color: $color-yellow;
+      float: right;
+      width: 25px;
+      height: 25px;
+    }
+
+    .status-icon-over {
+      position: relative;
+      color: $color-error;
+      float: right;
+      width: 25px;
+      height: 25px;
+    }
+
+    .status-icon-ongoing {
+      position: relative;
+      color: $color-green;
       float: right;
       width: 25px;
       height: 25px;
