--- a/src/Components/FilerMenu/FilterMenu.css
+++ b/src/Components/FilerMenu/FilterMenu.css
@@ -9,7 +9,7 @@
   background-color: #6540b0;
   border: none;
   border-radius: 10px;
-  margin: 12px;
+  margin: 12px 6px;
   padding: 6px;
   width: 5%;
   cursor: pointer;
