--- a/src/Components/FilerMenu/FilterMenu.scss
+++ b/src/Components/FilerMenu/FilterMenu.scss
@@ -11,7 +11,7 @@
     background-color: $color-purple;
     border: none;
     border-radius: 10px;
-    margin: 12px;
+    margin: 12px 6px;
     padding: 6px;
     width: 5%;
     cursor: pointer;
