--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -21,6 +21,7 @@
   width: 250px;
   height: 250px;
   position: relative;
+  align-self: center;
 }
 .item-main-wrap .image-wrap img {
   height: 100%;
@@ -32,6 +33,10 @@
   padding: 6px;
   margin: 4px;
   width: 65%;
+}
+.item-main-wrap .item-content-wrap .event-name-label {
+  margin-bottom: 12px;
+  font-weight: bold;
 }
 .item-main-wrap .item-content-wrap .first-row {
   display: flex;
