--- a/src/Components/AccountPage/AccountPage.css
+++ b/src/Components/AccountPage/AccountPage.css
@@ -8,13 +8,13 @@ body {
   margin: auto;
 }
 
-.main-wrap {
+.account-main-wrap {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
 }
-.main-wrap .account-main-content-wrap {
+.account-main-wrap .account-main-content-wrap {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -23,7 +23,7 @@ body {
   max-width: 90%;
   margin: 0 auto;
 }
-.main-wrap .account-main-content-wrap .account-info-pane {
+.account-main-wrap .account-main-content-wrap .account-info-pane {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -33,38 +33,38 @@ body {
   padding: 12px 18px;
   margin-right: 12px;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-content {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
   padding-bottom: 6px;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 30%;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap label {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap label {
   padding: 6px;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap input {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap input {
   width: 80%;
   border: none;
   border-radius: 10px;
   font-size: 12pt;
   padding: 3px 6px;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap input:focus {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-content .single-info-wrap input:focus {
   outline: #f3e156 solid 1.5px;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-buttons-wrap {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-buttons-wrap {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-buttons-wrap button {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-buttons-wrap button {
   background-color: #f3e156;
   border: none;
   border-radius: 10px;
@@ -72,12 +72,12 @@ body {
   margin: 4px;
   cursor: pointer;
 }
-.main-wrap .account-main-content-wrap .account-info-pane .account-info-buttons-wrap button .icon {
+.account-main-wrap .account-main-content-wrap .account-info-pane .account-info-buttons-wrap button .icon {
   width: 35px;
   height: 35px;
   padding: 6px;
 }
-.main-wrap button {
+.account-main-wrap button {
   background-color: #f3e156;
   border: none;
   cursor: pointer;
@@ -87,22 +87,22 @@ body {
   margin-bottom: 14px;
   margin-top: 14px;
 }
-.main-wrap .account-item-wrap {
+.account-main-wrap .account-item-wrap {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 12px auto;
 }
-.main-wrap .account-item-wrap .item-main-wrap {
+.account-main-wrap .account-item-wrap .item-main-wrap {
   margin: 0;
 }
-.main-wrap .account-item-wrap .account-item-buttons-wrap {
+.account-main-wrap .account-item-wrap .account-item-buttons-wrap {
   display: flex;
   flex-direction: column;
   margin-left: 12px;
 }
-.main-wrap .account-item-wrap .account-item-buttons-wrap button {
+.account-main-wrap .account-item-wrap .account-item-buttons-wrap button {
   background-color: #f3e156;
   border: none;
   border-radius: 10px;
@@ -110,10 +110,41 @@ body {
   margin-left: 4px;
   cursor: pointer;
 }
-.main-wrap .account-item-wrap .account-item-buttons-wrap button .icon {
+.account-main-wrap .account-item-wrap .account-item-buttons-wrap button .icon {
   width: 35px;
   height: 35px;
   padding: 8px;
+}
+
+.delete-notification-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  background-color: #3f394b;
+  border-radius: 10px;
+  padding: 12px;
+  outline: white solid 1px;
+}
+.delete-notification-wrap label {
+  width: 70%;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.delete-notification-wrap .delete-notification-buttons-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 60%;
+  margin: 0 auto;
+}
+.delete-notification-wrap .delete-notification-buttons-wrap button {
+  background-color: #f3e156;
+  padding: 6px 18px;
+  width: 65px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=AccountPage.css.map */
