--- a/src/Components/AccountPage/AccountPage.scss
+++ b/src/Components/AccountPage/AccountPage.scss
@@ -10,7 +10,7 @@ body {
   margin: auto;
 }
 
-.main-wrap {
+.account-main-wrap {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -131,5 +131,38 @@ body {
       }
     }
   }
+}
 
+.delete-notification-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  background-color: $color-ui;
+  border-radius: 10px;
+  padding: 12px;
+  outline: white solid 1px;
+
+  label {
+    width: 70%;
+    text-align: center;
+    margin-bottom: 12px;
+  }
+
+  .delete-notification-buttons-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 60%;
+    margin: 0 auto;
+
+    button {
+      background-color: $color-yellow;
+      padding: 6px 18px;
+      width: 65px;
+      cursor: pointer;
+    }
+  }
 }
