Front end for editing account information.

--- a/src/Components/AccountPage/AccountPage.css
+++ b/src/Components/AccountPage/AccountPage.css
@@ -145,6 +145,7 @@ body {
   padding: 6px 18px;
   width: 65px;
   cursor: pointer;
+  color: #25212d;
 }
 
 /*# sourceMappingURL=AccountPage.css.map */
