--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -42,6 +42,7 @@
     .event-name-label {
       margin-bottom: 12px;
       font-weight: bold;
+      margin-right: 0;
     }
 
     .first-row {
@@ -58,19 +59,24 @@
       label {
         width: 25%;
         margin-left: 12px;
+        margin-right: 0;
       }
     }
 
     .second-row {
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: space-between;
       margin-top: 6px;
       margin-bottom: 6px;
 
       label {
-        margin-right: 12px;
-        width: 25%;
+        width: 24%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 57px;
+        margin-right: 0;
       }
     }
 
