--- a/src/Components/SignupForm/SignupForm.scss
+++ b/src/Components/SignupForm/SignupForm.scss
@@ -18,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 400px;
-    margin: 15% auto;
+    margin: 46px auto;
     align-items: center;
 
     h2 {
