--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 400px;
-  margin: 15% auto;
+  margin: 46px auto;
   align-items: center;
 }
 .main-wrap .form-wrap h2 {
