--- a/src/Components/LoginForm/LoginForm.scss
+++ b/src/Components/LoginForm/LoginForm.scss
@@ -53,7 +53,7 @@ body {
           width: 100%;
         }
         input:focus {
-          outline: none;
+          outline: $color-yellow solid 1px;
         }
 
         .error-wrap {
