--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -56,7 +56,7 @@ body {
   width: 100%;
 }
 .main-wrap .form-wrap .content-wrap .field input:focus {
-  outline: none;
+  outline: #f3e156 solid 1px;
 }
 .main-wrap .form-wrap .content-wrap .field .error-wrap {
   position: absolute;
