God-damn css fixes again

--- a/src/Components/SignupForm/SignupForm.scss
+++ b/src/Components/SignupForm/SignupForm.scss
@@ -18,6 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 400px;
+    width: 100%;
     margin: 46px auto;
     align-items: center;
 
