--- a/src/Components/AddConventionPage/AddConventionPage.scss
+++ b/src/Components/AddConventionPage/AddConventionPage.scss
@@ -65,13 +65,22 @@
         .image-wrap {
           margin-right: 12px;
           background-color: $color-yellow;
-          width: 250px;
+          min-width: 250px;
           height: 250px;
           position: relative;
 
           img {
-            height: 100%;
-            width: 100%;
+            height: 250px;
+            width: 250px;
+          }
+
+          .logo-input {
+            position: absolute;
+            z-index: 1;
+            left: 0;
+            background-color: $color-yellow;
+            padding: 6px;
+            width: 250px;
           }
         }
 
