--- a/src/Components/AccountPage/AccountPage.scss
+++ b/src/Components/AccountPage/AccountPage.scss
@@ -101,6 +101,12 @@ body {
       display: flex;
       align-items: center;
     }
+    .block-user-icon {
+      color: white;
+      width: 35px;
+      height: 35px;
+      margin: 0 6px 0 6px;
+    }
   }
 
   .account-page-button {
