--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -20,7 +20,6 @@
   background-color: #f3e156;
   width: 250px;
   height: 250px;
-  position: relative;
   align-self: center;
 }
 .item-main-wrap .image-wrap img {
@@ -101,25 +100,39 @@
   color: black;
 }
 .item-main-wrap .item-right-pane .status-icon-upcoming {
-  position: relative;
   color: #f3e156;
   float: right;
   width: 25px;
   height: 25px;
 }
 .item-main-wrap .item-right-pane .status-icon-over {
-  position: relative;
   color: #ef5f5f;
   float: right;
   width: 25px;
   height: 25px;
 }
 .item-main-wrap .item-right-pane .status-icon-ongoing {
-  position: relative;
   color: #69ee70;
   float: right;
   width: 25px;
   height: 25px;
+}
+
+.blocked-cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(63, 57, 75, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blocked-cover .icon {
+  z-index: 10;
+  color: #ef5f5f;
+  height: 25%;
 }
 
 /*# sourceMappingURL=Item.css.map */
