--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -23,7 +23,6 @@
     background-color: $color-yellow;
     width: 250px;
     height: 250px;
-    position: relative;
     align-self: center;
 
     img {
@@ -116,7 +115,6 @@
     }
 
     .status-icon-upcoming {
-      position: relative;
       color: $color-yellow;
       float: right;
       width: 25px;
@@ -124,7 +122,6 @@
     }
 
     .status-icon-over {
-      position: relative;
       color: $color-error;
       float: right;
       width: 25px;
@@ -132,11 +129,28 @@
     }
 
     .status-icon-ongoing {
-      position: relative;
       color: $color-green;
       float: right;
       width: 25px;
       height: 25px;
     }
+  }
+}
+
+.blocked-cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba($color-ui, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .icon {
+    z-index: 10;
+    color: $color-error;
+    height: 25%;
   }
 }
